--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="Banner-Title">
           <h1 class="Banner-Title-1st">PLAY LIKE THE</h1>
           <h1 class="Banner-Title-2nd">G.O.A.T</h1>
+          <br />
           <p>1-Click instant play</p>
           <br />
           <p>No Download</p>
@@ -67,5 +68,28 @@
         </div>
       </div>
     </header>
+    <main>
+      <section class="We-are-gamer">
+        <div class="We-are-gamer-img">
+          <img src="images/pngwing 4.png" alt="" />
+        </div>
+        <div class="We-are-gamer-text">
+          <h3>We are gamer</h3>
+          <br />
+          <p>
+            An international digital games and entertainment company. We
+            develop, publish and distribute multiplayer mobile games. We reach
+            over 400 million players each month and our audience keeps growing.
+          </p>
+          <br />
+          <button>KNOW MORE</button>
+          <br />
+          <br />
+          <h3>Our Purpose...</h3>
+          <br />
+          <h2>"Unleash the gamer in everyone"</h2>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
